[gd_scene load_steps=6 format=3 uid="uid://cnryahagj78dg"]

[ext_resource type="Script" uid="uid://cbrjrayjm3qlk" path="res://Scripts/Cutscenes/flash_art.gd" id="1_ihkj2"]
[ext_resource type="AudioStream" uid="uid://dl3it4uvj78yk" path="res://Assets/Audio/SFX  menu click.mp3" id="3_utisu"]
[ext_resource type="FontFile" uid="uid://6ik02l1yg1ii" path="res://Assets/Fonts/Fusion Pixel 10px Monospaced/fusion-pixel-10px-monospaced-zh_hans.otf" id="7_ifd0m"]
[ext_resource type="Texture2D" uid="uid://xp74wwnobecc" path="res://Assets/Sprites/Cutscene/yoga.png" id="9_6i0u5"]

[sub_resource type="LabelSettings" id="LabelSettings_iplgb"]
font = ExtResource("7_ifd0m")
font_size = 41

[node name="FlashArt" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -291.0
offset_right = 226.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_6i0u5")

[node name="TextureRect2" type="TextureRect" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -291.0
offset_right = 226.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_6i0u5")

[node name="TextureRect3" type="TextureRect" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -291.0
offset_right = 226.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_6i0u5")

[node name="TextureRect4" type="TextureRect" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -291.0
offset_right = 226.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_6i0u5")

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -442.0
offset_top = -183.0
offset_right = 442.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
text = "Lorem ipsum dolor sit amet"
label_settings = SubResource("LabelSettings_iplgb")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="."]
offset_left = 979.0
offset_top = 539.0
offset_right = 1131.0
offset_bottom = 589.0
theme_override_fonts/font = ExtResource("7_ifd0m")
theme_override_font_sizes/font_size = 41
text = "Next ->"
script = ExtResource("1_ihkj2")

[node name="SFX_Click" type="AudioStreamPlayer" parent="Button"]
process_mode = 3
stream = ExtResource("3_utisu")
bus = &"SFX"

[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
